<resources>
    <string name="app_name">BoilerPlate</string>
    <string name="action_logout">Logout</string>
    <!-- Strings used for fragments for navigation -->
    <string name="signin_fragment_label">SignIn Fragment</string>
    <string name="signup_fragment_label">SignUp Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="rememberMe">remember_me</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login_as_user">Login As User</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="i_agree_with_the_information_sharing">I agree with the information sharing</string>
    <string name="create_account">Create Account</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="click_to_select">Click to Select</string>
    <string name="profile">Profile</string>
    <string name="food_tracker">Food Tracker</string>
    <string name="calculate_bmi">Calculate BMi</string>
    <string name="list_guardian">List Guardian</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="dashboard">Dashboard</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="dose_amount">Dose amount</string>
    <string name="reminders_condition">Reminders (condition)</string>
    <string name="medicine">Medicine</string>
    <string name="address">Address</string>
    <string name="about">About</string>
    <string name="add_guardian">Add Guardian</string>
    <string name="delete_guardian">Delete Guardian</string>
    <string name="guardian">Guardian</string>
    <string name="bmi_calculator">Bmi Calculator</string>
    <string name="calories_count">%1$d of 462 Cal</string>
    <string name="totalCalories">%1$d of 1850</string>
    <string name="name_of_food">Name of food</string>
    <string name="no_of_calories">No of Calories</string>
    <string name="guardian_name">Guardian Name</string>
    <string name="relationship">Relationship</string>
    <string name="input_kg">%1$s kg</string>
    <string name="input_years">%1$s yrs</string>
    <string name="input_cm">%1$s cm</string>
    <string name="you_are_severely_underweight">You are Severely Underweight</string>
    <string name="you_are_underweight">You are Underweight</string>
    <string name="you_are_normal">You are Normal</string>
    <string name="you_are_overweight">You are Overweight</string>
    <string name="you_are_moderately_obese">You are Moderately Obese</string>
    <string name="you_are_severely_obese">You are Severely Obese</string>
    <string name="hi_user">Hi %1$s!</string>
    <string name="reminder">reminder</string>
</resources>