<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.boilerplate.main.dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_dashboardFragment_to_medicineFragment2"
            app:destination="@id/medicineFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_foodTrackerFragment"
            app:destination="@id/foodTrackerFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_guardianFragment"
            app:destination="@id/guardianFragment" />
    </fragment>
    <fragment
        android:id="@+id/medicineFragment"
        android:name="com.example.boilerplate.main.medicine.MedicineFragment"
        android:label="@string/medicine"
        tools:layout="@layout/fragment_medicine" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.boilerplate.main.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/foodTrackerFragment"
        android:name="com.example.boilerplate.main.food_tracker.FoodTrackerFragment"
        android:label="@string/food_tracker"
        tools:layout="@layout/fragment_food_tracker" />
    <fragment
        android:id="@+id/guardianFragment"
        tools:layout="@layout/fragment_guardian"
        android:name="com.example.boilerplate.main.guardian.GuardianFragment"
        android:label="@string/guardian" />
</navigation>